# skill-examples

./: .gitignore  README.md
.github/workflows/: release.yml
as/: README.md
as/archive/: README.md  asconfig.json  package-lock.json  package.json
as/echo/: README.md  asconfig.json  manifest.yaml  package-lock.json  package.json
as/file-transfer/: README.md  asconfig.json  package-lock.json  package.json
as/fs/: README.md  asconfig.json  manifest.yaml  package-lock.json  package.json
as/git/: README.md  asconfig.json  manifest.yaml  package-lock.json  package.json
as/go/: README.md  asconfig.json  package-lock.json  package.json
as/python/: README.md  asconfig.json  package-lock.json  package.json
as/web/: README.md  asconfig.json  manifest.yaml  package-lock.json  package.json
as/web-search/: README.md  asconfig.json  package-lock.json  package.json
go/: README.md
go/archive/: README.md  go.mod  manifest.yaml  skill.go
go/echo/: README.md  go.mod  manifest.yaml  skill.go
go/file-transfer/: README.md  go.mod  manifest.yaml  skill.go
go/fs/: README.md  go.mod  manifest.yaml  skill.go
go/git/: README.md  go.mod  go.sum  manifest.yaml  skill.go
go/go/: README.md  go.mod  manifest.yaml  skill.go
go/js-engine/: README.md  go.mod  go.sum  manifest.yaml  skill.go
go/web/: README.md  go.mod  manifest.yaml  skill.go
go/web-search/: README.md  go.mod  manifest.yaml  skill.go
rust/: README.md
rust/archive/: Cargo.toml  README.md  manifest.yaml
rust/echo/: Cargo.toml  README.md  manifest.yaml
rust/echo/src/: skill.rs
rust/file-transfer/: Cargo.toml  README.md  manifest.yaml
rust/fs/: Cargo.toml  README.md  manifest.yaml
rust/git/: Cargo.toml  README.md  manifest.yaml
rust/intent-classifier/: Cargo.toml  README.md  manifest.yaml
rust/intent-classifier/model/: intent.onnx
rust/intent-classifier/src/: skill.rs
rust/intent-classifier/src/skill/: classifier.rs
rust/intent-classifier/train/: intents.json  train.py
rust/python-engine/: Cargo.toml  README.md  manifest.yaml
rust/python-engine/src/: skill.rs
rust/tree-sitter/: Cargo.toml  README.md  manifest.yaml
rust/tree-sitter/src/: skill.rs
rust/web/: Cargo.toml  (+2 more)
rust/web-search/: Cargo.toml  README.md  manifest.yaml
(+15 files in other folders)
