[package]
name = "intent-classifier-skill"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
luminarys-sdk = "0.2.0"
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tract-onnx = "0.21.6"

[profile.release]
opt-level = "z"
lto = true
strip = true
