[package]
name = "python-engine-skill"
version = "1.0.0"
edition = "2021"

# Build (per official RustPython WASM example):
#   cargo build --target wasm32-wasi --no-default-features --features compiler --release
#
# Note: freeze-stdlib,stdlib is not compatible with wasm32-wasi targets
# because frozen stdlib bytecode requires WASI syscalls not available
# in sandboxed WASM runtimes. The official wasm32 example uses
# without_stdlib for exactly this reason.

[lib]
crate-type = ["cdylib"]

[dependencies]
luminarys-sdk = "0.2.0"
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.3"

[dependencies.rustpython-vm]
git = "https://github.com/RustPython/RustPython"
default-features = false
features = ["compiler"]
