[package]
name = "tree-sitter-skill"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
luminarys-sdk = "0.2.0"
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"

# Language grammars — each compiles C parser code into the WASM binary.
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-c = "0.23"
tree-sitter-java = "0.23"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
